World Nodes Window Coordinates break with Orthographic Cameras. #63023

Closed
opened 2019-03-27 19:49:53 +01:00 by Cam · 5 comments

Tested on two systems and builds:
Win8x64, GTX 680, 2.8 recent buildbots (Cycles & EEVEE)
Win7x64, Intel iGPU, 2.79 d59c2d1 (Cycles CPU PT & BPT)

Texture Coordinate > Window outputs only one value if used with an orthographic camera in the World material node tree.
Confirmed under both Cycles and EEVEE.

World_Window_Coords_break_with_Ortho_Camera.blend

To reproduce render the two frame animation in the attached blend file.
Frame one shows the expected output as available under an Object material node tree.
Frame two shows the error where all pixels are homogenous and unsuitable for mapping anything really.

Tested on two systems and builds: Win8x64, GTX 680, 2.8 recent buildbots (Cycles & EEVEE) Win7x64, Intel iGPU, 2.79 d59c2d1 (Cycles CPU PT & BPT) Texture Coordinate > Window outputs only one value if used with an orthographic camera in the World material node tree. Confirmed under both Cycles and EEVEE. [World_Window_Coords_break_with_Ortho_Camera.blend](https://archive.blender.org/developer/F6891904/World_Window_Coords_break_with_Ortho_Camera.blend) To reproduce render the two frame animation in the attached blend file. Frame one shows the expected output as available under an Object material node tree. Frame two shows the error where all pixels are homogenous and unsuitable for mapping anything really.
Author

Added subscriber: @Ortho_Cam

Added subscriber: @Ortho_Cam
Author

Added subscribers: @brecht, @fclem

Added subscribers: @brecht, @fclem

Cycles part has been fixed.

Cycles part has been fixed.

This issue was referenced by c263ccf250

This issue was referenced by c263ccf250b5cc3a5dd1f6cec29884d89ad79b7b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63023
No description provided.