Fix part of T63023: wrong Cycles window coordinates for background.